# arga-arc

./: .gitignore  .gitmodules  08ed6ac7.dsl  ARCGraph.py  OEValuesManager.py  VocabMaker.py  abstraction_prompt.py  arc_gpt4.py  arc_prompting.ipynb  arga_ast_generator.py  arga_dsl.lark  childrenIterator.py  compute_pcfg.py  config.py  data.py  defs.py  enumerator.py  evaluate-gpt4.ipynb  evaluate_gpt4.py  filter.py  filter_synthesis.py  filter_test.py  filters.py  filters_eval.py  gen_stats.ipynb  gens_merge.ipynb  image.py  initial_pcfg.py  lookaheadIterator.py  main.py  pcfg_compute.py  prompt_mod.py  pyproject.toml  run_solution.py  run_synthesis.py  run_synthesize.py  sexpr_stats.ipynb  show.py  solutions_explorer.ipynb  synthesis.py  (+10 more)
arga-res/: solutions_zero_aug.csv  solutions_zero_color.csv  solutions_zero_move.csv  todo.txt
dataset/: solutions.json
dsl/: __init__.py  dsl.lark  parser.py  sexpr.lark  subset_a.txt  utils.py
gpt4/: 08ed6ac7.dsl  1e0a9b12.dsl  3906de3d.dsl  6455b5f5.dsl  67385a82.dsl  d2abd087.dsl  ea32f347.dsl
ic_examples/: extend_to_max.json  move_to_grey.json  recolor_y.json  three_move_recolor.json
models/: gpt_gen.py  lm.py  prompt.py  task.txt
prompting/: arc_gpt4.py
sygus/: .gitignore  README.md  circuit-completions.gpt-3.5-turbo.10.json  circuit-completions.gpt-3.5-turbo.100.json  circuit-completions.gpt-3.5-turbo.20.json  circuit-completions.gpt-3.5-turbo.50.json  circuit-completions.gpt-3.5-turbo.json  circuit-completions.json  circuit-generated-examples.json  hackers-delight-completions-with-constants.gpt-3.5-turbo.json  (+49 more)
(+1979 files in other folders)
