[tool.poetry]
name = "arga-arc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<=3.13"
networkx = "^3.2.1"
matplotlib = "^3.8.1"
lark = "^1.1.8"
openai = "^1.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
