[tool.poetry]
name = "arga-arc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
networkx = "^3.2.1"
matplotlib = "^3.8.1"
lark = "^1.1.8"
openai = "^1.3.3"
numpy = "^1.26.4"
sexpdata = "^1.0.2"
python-dotenv = "^1.0.1"
tiktoken = "^0.6.0"
ipykernel = "^6.29.3"
octoai = "^0.0.4"
tqdm = "^4.66.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
